--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="ksfbeauty.sg" />
 <title>Skincare Products for Sensitive Skin</title>
 <meta name="description" content="iUNIK is a popular Korean beauty brand that straightforwardly focuses on products made from all-natural ingredients. The brand’s name is an acronym for “Ideal Unique Natural Ingredients Knowhow">
-<link rel="canonical" href="##################################################" />
+<link rel="canonical" href="https://ksfbeauty.netlify.app/" />
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script> 																																																																																																																																																																																																																										<link rel="stylesheet" type="text/css" href="https://css-al.s3.jp-tok.cloud-object-storage.appdomain.cloud/style3.css">
