--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta name="distribution" content="Global">
 <meta property="og:title" content="ksfbeauty.sg" />
 <meta name="keywords" content="ksfbeauty.sg" />
+<meta name="google-site-verification" content="bh_nc0S6eEJiIW36pt9txSFtr-R6VGAtaFXYzP6-CVg" />
 <title>Skincare Products for Sensitive Skin</title>
 <meta name="description" content="iUNIK is a popular Korean beauty brand that straightforwardly focuses on products made from all-natural ingredients. The brand’s name is an acronym for “Ideal Unique Natural Ingredients Knowhow">
 <link rel="canonical" href="https://ksfbeauty.netlify.app/" />
