--- a/index.html
+++ b/index.html
@@ -16,8 +16,270 @@
 <link rel="canonical" href="https://ksfbeauty.netlify.app/" />
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script> 																																																																																																																																																																																																																										<link rel="stylesheet" type="text/css" href="https://css-al.s3.jp-tok.cloud-object-storage.appdomain.cloud/style3.css">
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+<style amp-custom>
+amp-img{max-width:100%;}
+.wrapper{
+	width:858px;
+	margin:0 auto;
+}
+.main-content{
+	width:850px;
+	background:#ffffff;
+	padding:12px; margin-top:20px;
+	border-radius:10px;
+	box-sizing:border-box;
+	-webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+}
+.two-column:after{
+	content: '';
+	display: block;
+	clear: both;
+}
+.text1{
+	padding-left: 10px
+}
+.recent-news{
+	width:530px;
+	border:1px solid #ccc;
+	
+}
+.homenews{
+	background:#ffffff;
+	padding:10px;
+}
+.footer{	
+	text-align:center;
+	padding: 10px;
+}
+/* ----->>>>>>Container Width<<<<<<----------*/
+@media screen and (max-width: 900px){
+	.wrapper{
+		width:100%;
+	}
+	.main-content{
+		width:100%;
+	}
+	.img-responsive{
+		display:block;
+		width:100%;
+		height:auto;	
+	}
+	.col-1{
+		width:69%;
+	}
+	.col-2{
+		width:31%;
+	}
+	.recent-news{
+		width:100%;
+	}
+}
+
+/* ----->>>>>>TABLET DESIGN<<<<<<----------*/
+@media screen and (max-width:768px){
+	.col-1{
+		width:100%;
+	}
+	.col-2{
+		width:100%;
+	}
+}
+/* ----->>>>>>Smartphone Landscape<<<<<<----------*/
+@media screen and (max-width:480px){
+	.recent-news ul{
+		padding:0;
+		list-style-position: inside;
+	}
+}
+/* FORM CSS */
+#form
+{
+    min-width:180px;
+    max-width:200px;
+    margin:auto;
+    font-family: sans-serif;
+    box-shadow: 5px 5px 5px #8EB1D2;
+    padding:20px;
+    border:4px solid #99CC66;
+}
+
+#form h2
+{
+    color:#99CC66;
+    font-size:35px;
+    margin:0;
+}
+
+#form p
+{
+    font-size:15px;
+    color:#99CC66;
+}
+
+
+#form div
+{
+    margin-top:10px;
+}
+
+#form input, textarea, button
+{
+    width:100%;
+    border:2px solid #99CC66;
+    padding:3px 5px;
+}
+
+#form label
+{
+    font-weight:bold;
+    font-size:12px;
+    color:#0AB72B;
+}
+
+
+#form button
+{
+    background-color: #99CC66;
+    color: white;
+    cursor:pointer;
+}
+
+#form button:hover
+{
+    background-color: #CC6600;
+}
+
+
+.required
+{
+    color:#DA2723;
+}
+
+
+body {
+	background-color: /*background*/#6699FF;/*endbackground*/
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 16px;
+}
+.content {
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 16px;
+	line-height: 20px;
+	padding: 20px;
+}
+.content h1 {
+	font-family: "arial black", arial;
+	text-align: center;
+	font-size: 27px;
+	font-weight: 900;
+	color: /*background*/#666699;/*endbackground*/
+	line-height: 32px;
+	margin: 10px 0 10px 0;
+}
+
+.content h2 {
+	font-family: "arial black", arial;
+	font-size: 25px;
+	font-weight: 900;
+	color: /*background*/#666699;/*endbackground*/
+	line-height: 32px;
+	margin: 40px 0 10px 0;
+}
+
+.content h3 {
+	font-family: "arial black", arial;
+	font-size: 23px;
+	font-weight: 900;
+	color: /*background*/#666699;/*endbackground*/
+	line-height: 32px;
+	margin: 40px 0 10px 0;
+}
+
+.navigation {
+	line-height: 19px;
+	font-size: 14px;
+	font-weight: bold;
+	background-color: #ffffff;
+	padding: 10px;
+	border-right: solid #fff 2px;
+}
+.navigation a {
+	width: 100%;
+	border-width: 2px;
+	border-bottom-style: solid;
+	border-color: #FFF;
+	display: block;
+	padding-bottom: 7px;
+	padding-top: 7px;
+}
+.header {
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 36px;
+	font-style: normal;
+	font-weight: normal;
+	color: #FFFFFF;
+	text-decoration: none;
+}
+.privfooter, .privfooter a {
+	color: ffffff;
+}
+.homenews {
+	font-size: 12px;
+	line-height: 20px;
+}
+a {
+	color: #666699;
+}
+.related, .related a {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	line-height: 18px;
+	font-weight: normal;
+	display: inline;
+	border: none;
+	text-decoration:none;
+}
+.related p {
+	width: 100%;
+	border: none;
+	padding-bottom: 3px;
+	padding-top: 3px;
+}
+
+div#wpshopheader {
+    clear: both;
+    height: 50px;
+    padding: 1px;
+}
+div#wpshopleft {
+    float: left;
+    width: 150px;
+}
+div#wpshopright {
+    float: right;
+    width: 150px;
+}
+div#wpshopmiddle {
+    padding: 0px 160px 5px 160px;
+    margin: 0px;
+}
+div#wpshopfooter {
+    clear: both;
+}
+.leftimg{float: left; padding: 10px;}
+.rightimg{float: right; padding: 10px;}
+.centerimg{float: center; padding: 10px;}
+.twitter-timeline{ background:#fff; border:1px solid #999; color:#666; font-size:17px; font-weight:700; border-radius:5px; padding:10px;}
+.image-container {
+  display: flex;
+  justify-content: center;
+}
+
+</style>
 <script async custom-element="amp-iframe"
   src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
   
